--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "antd": "^5.25.3",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
     "lucide-react": "^0.511.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
